--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
     "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0"
   }
 }
