mejora en paquetes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,19 @@
 MONGODB_URI = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 NODE_ENV = DEV
 JWT_SECRET = xxxxxxxxxxxx
+
+URL_BACKEND = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+URL_FRONTEND = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+HOST_MAILTRAP = xxxxxxxxxxxxxxxxxxxxxx
+PORT_MAILTRAP = xxxxxxxxxxxxxxxxxxxxxx
+USER_MAILTRAP = xxxxxxxxxxxxxxxxxxxxxx
+PASS_MAILTRAP = xxxxxxxxxxxxxxxxxxxxxx
+
+CLOUDINARY_CLOUD_NAME = xxxxxxxxxxxxxxxxxxxxxx
+CLOUDINARY_API_KEY = xxxxxxxxxxxxxxxxxxxxxx
+CLOUDINARY_API_SECRET = xxxxxxxxxxxxxxxxxxxxxx
+
+TOKEN_HUGGINGFACE = xxxxxxxxxxxxxxxxxxxxxx
+
+STRIPE_PRIVATE_KEY = xxxxxxxxxxxxxxxxxxxxxx
