--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@huggingface/inference": "^3.13.1",
-    "axios": "^1.9.0",
-    "bcrypt": "^5.1.1",
+    "@huggingface/inference": "^4.5.3",
+    "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.2",
+    "mongoose": "^8.16.4",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.10.0",
-    "stripe": "^18.2.1",
+    "nodemailer": "^7.0.5",
+    "stripe": "^18.3.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
-    "babel-jest": "^29.7.0",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "babel-jest": "^30.0.5",
     "babel-plugin-transform-import-meta": "^2.3.3",
     "cross-env": "^7.0.3",
-    "jest": "^29.7.0"
+    "jest": "^30.0.5"
   }
 }
